Upgrade Clojure to 1.11.1
- Allows memory-meter to work